# senasa-data-pipeline

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yml  pyproject.toml
docs/: arquitectura.md
src/senasa_pipeline/: config.py
src/senasa_pipeline/application/: use_cases.py
src/senasa_pipeline/application/dtos/: export_request_dto.py  senasa_record_dto.py  sync_request_dto.py
src/senasa_pipeline/application/ports/: afip_token_provider_port.py  auth_provider_port.py  data_port.py  http_client_port.py  notification_port.py  senasa_login_port.py  session_store_port.py  storage_port.py
src/senasa_pipeline/application/use_cases/: ensure_senasa_session.py  export_senasa_data.py  sync_senasa_data.py  validate_senasa_record.py
src/senasa_pipeline/cli/: main.py
src/senasa_pipeline/domain/: __init__.py  model.py
src/senasa_pipeline/domain/entities/: establecimiento.py  senasa_record.py  tambor.py
src/senasa_pipeline/domain/repositories/: interfaces.py
src/senasa_pipeline/domain/value_objects/: codigo_senasa.py  cuit.py  fecha_vencimiento.py
src/senasa_pipeline/infrastructure/: adapters.py
src/senasa_pipeline/infrastructure/adapters/: notification_adapter.py  scraping_adapter.py  storage_adapter.py
src/senasa_pipeline/infrastructure/adapters/afip/: jsf_provider.py  portal_cf_provider.py  unified_provider.py
src/senasa_pipeline/infrastructure/adapters/http/: httpx_client.py  requests_client.py
src/senasa_pipeline/infrastructure/adapters/senasa/: login_consumer.py
src/senasa_pipeline/infrastructure/adapters/session/: memory_store.py  sqlite_store.py
src/senasa_pipeline/infrastructure/external_services/: senasa_api_client.py  senasa_web_scraper.py
src/senasa_pipeline/infrastructure/repositories/: duckdb_repository.py  postgresql_repository.py
src/senasa_pipeline/presentation/: api.py  routes.py
src/senasa_pipeline/presentation/api/: main.py
src/senasa_pipeline/presentation/api/routes/: auth.py  health.py  senasa.py
src/senasa_pipeline/presentation/cli/: main.py
tests/unit/: _fakes_auth.py  test_auth_use_case.py  test_sync_use_case.py
