[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "senasa-data-pipeline"
version = "0.1.0"
description = "Modern SENASA data pipeline: scraping, ETL, validation, NLP and FastAPI with Clean Architecture."
authors = ["Tomas Daniel Gonzalez <tomi158@outlook.com>"]
readme = "README.md"
packages = [{ include = "senasa_pipeline", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
httpx = "^0.27.0"
requests = "^2.32.0"
backoff = "^2.2.1"
tenacity = "^9.0.0"
loguru = "^0.7.2"
pydantic = {version = "^2.8.0", extras = ["email"]}
pydantic-settings = "^2.4.0"
celery = {version = "^5.4.0", extras = ["redis"]}
redis = "^5.0.0"
python-dotenv = "^1.0.1"
pandas = "^2.2.0"
polars = "^1.7.0"
duckdb = "^1.0.0"
pyarrow = "^17.0.0"
openpyxl = "^3.1.2"
xlsxwriter = "^3.2.0"
rich = "^13.8.0"
typer = {version = "^0.12.3", extras = ["all"]}
click = "^8.1.7"
spacy = "^3.7.4"
rapidfuzz = "^3.9.3"
scikit-learn = "^1.5.0"
structlog = "^24.1.0"
prometheus-client = "^0.20.0"
SQLAlchemy = "^2.0.32"
alembic = "^1.13.2"
beautifulsoup4 = "^4.14.2"
lxml = "^6.0.2"
html5lib = "^1.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.0"
mypy = "^1.11.0"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.7"
pre-commit = "^3.8.0"
mkdocs-material = "^9.5.0"

[tool.poetry.scripts]
senasa = "senasa_pipeline.presentation.cli.main:app"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E","W","F","I","N","UP","S","B","C4","ICN","PIE","T20"]
ignore = ["E203","E266","E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py","*_test.py"]
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*","*/migrations/*"]
